--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
 
     <string name="image_contentDescription">image</string>
     <string name="let_s_get_started_text">Let\'s Get started</string>
-    <string name="intro_text_description">Collaborate and Plan Together Across Multiple Devices on Projemanag’s Minimalist Interface.</string>
+    <string name="intro_text_description">Connect and Volunteer Seamlessly Through VolonterApp’s Simple and Unified Interface</string>
     <string name="sign_in">SIGN IN</string>
     <string name="sign_up">SIGN UP</string>
 
@@ -24,11 +24,11 @@
     <string name="update">UPDATE</string>
     <string name="my_profile">My Profile</string>
 
-    <string name="create_board_title">Create Board</string>
+    <string name="create_board_title">Create Event</string>
     <string name="create">CREATE</string>
-    <string name="board_name">Board Name</string>
+    <string name="board_name">Event Name</string>
 
-    <string name="no_boards_are_available">No Boards are available!!!</string>
+    <string name="no_boards_are_available">No Events are available!!!</string>
 
     <string name="action_add_list">Add List</string>
     <string name="hint_list_name">List Name</string>
