--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,65 +1,65 @@
 <resources>
     <string name="app_name">Volonter</string>
 
-    <string name="image_contentDescription">image</string>
-    <string name="let_s_get_started_text">Let\'s Get started</string>
-    <string name="intro_text_description">Connect and Volunteer Seamlessly Through VolonterApp’s Simple and Unified Interface</string>
-    <string name="sign_in">SIGN IN</string>
-    <string name="sign_up">SIGN UP</string>
+    <string name="image_contentDescription">slika</string>
+    <string name="let_s_get_started_text">Krenimo!</string>
+    <string name="intro_text_description">Poveži se i volontiraj bez poteškoća putem jednostavnog i preglednog sučelja VolonterApp-a</string>
+    <string name="sign_in">PRIJAVI SE</string>
+    <string name="sign_up">REGISTRIRAJ SE</string>
 
-    <string name="sign_up_description_text">Enter your name, email id and password, to register with us.</string>
-    <string name="name">Name</string>
-    <string name="password">Password</string>
+    <string name="sign_up_description_text">Unesi svoje ime, e-mail adresu i lozinku kako bi se registrirao.</string>
+    <string name="name">Ime</string>
+    <string name="password">Lozinka</string>
     <string name="email">Email</string>
 
-    <string name="sign_in_description_text">Enter your name, email id and password, to register with us.</string>
+    <string name="sign_in_description_text">Unesi svoje ime, e-mail adresu i lozinku kako bi se prijavio.</string>
 
-    <string name="please_click_back_again_to_exit">Please click back again to exit.</string>
-    <string name="please_wait">Please Wait&#8230;</string>
+    <string name="please_click_back_again_to_exit">Molimo pritisni natrag još jednom za izlaz iz aplikacije.</string>
+    <string name="please_wait">Molimo pričekaj&#8230;</string>
 
-    <string name="nav_my_profile">My Profile</string>
-    <string name="nav_sign_out">Sign Out</string>
+    <string name="nav_my_profile">Moj Profil</string>
+    <string name="nav_sign_out">Odjavi Se</string>
 
-    <string name="mobile">Mobile</string>
-    <string name="update">UPDATE</string>
-    <string name="my_profile">My Profile</string>
+    <string name="mobile">Broj Mobitela</string>
+    <string name="update">AŽURIRAJ</string>
+    <string name="my_profile">Moj Profil</string>
 
-    <string name="create_board_title">Create Event</string>
-    <string name="create">CREATE</string>
-    <string name="board_name">Event Name</string>
+    <string name="create_board_title">Kreiraj Volonterski Klub</string>
+    <string name="create">KREIRAJ</string>
+    <string name="board_name">Ime Volonterskog Kluba</string>
 
-    <string name="no_boards_are_available">No Events are available!!!</string>
+    <string name="no_boards_are_available">Nema dostupnih klubova!!!</string>
 
-    <string name="action_add_list">Add List</string>
-    <string name="hint_list_name">List Name</string>
-    <string name="action_add_card">Add Card</string>
-    <string name="hint_card_name">Card Name</string>
-    <string name="add_list">Add List</string>
+    <string name="action_add_list">Dodaj Volontersku Akciju</string>
+    <string name="hint_list_name">Naziv</string>
+    <string name="action_add_card">Dodaj Radnju</string>
+    <string name="hint_card_name">Naziv Radnje</string>
+    <string name="add_list">Dodaj Volontersku Akciju</string>
 
-    <string name="members">Members</string>
+    <string name="members">Korisnici</string>
 
-    <string name="add_member">Add Member</string>
-    <string name="cancel">CANCEL</string>
-    <string name="add">ADD</string>
-    <string name="search_member">Search Member</string>
+    <string name="add_member">Dodaj Korisnika</string>
+    <string name="cancel">OTKAŽI</string>
+    <string name="add">DODAJ</string>
+    <string name="search_member">Pretraži člana</string>
 
-    <string name="label_color">Label Color</string>
-    <string name="select_color">Select Color</string>
-    <string name="select_members">Select Members</string>
+    <string name="label_color">Boja Oznake</string>
+    <string name="select_color">Izaberi Boju</string>
+    <string name="select_members">Odaberi Korisnike</string>
 
-    <string name="due_date">Due Date</string>
-    <string name="select_due_date">Select Due Date</string>
-    <string name="delete_card">Delete Card</string>
+    <string name="due_date">Datum Akcije</string>
+    <string name="select_due_date">Odaberi Datum</string>
+    <string name="delete_card">Obriši volontersku akciju</string>
 
-    <string name="alert">Alert</string>
-    <string name="confirmation_message_to_delete_card">Are you sure you want to delete card \'%1$s\'?</string>
-    <string name="yes">Yes</string>
-    <string name="no">No</string>
+    <string name="alert">Upozorenje</string>
+    <string name="confirmation_message_to_delete_card">Jesi li siguran da želiš obrisati \'%1$s\'?</string>
+    <string name="yes">Da</string>
+    <string name="no">Ne</string>
 
-    <string name="str_select_label_color">Select Label Color</string>
+    <string name="str_select_label_color">Odaberi Boju Oznake</string>
 
-    <string name="str_select_member">Select Member</string>
+    <string name="str_select_member">Odaberi Korisnike</string>
 
 
-    <string name="default_notification_channel_id">projemanag_notification_channel_id</string>
+    <string name="default_notification_channel_id">volonter_notification_channel_id</string>
 </resources>
