add statistic page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,7 @@
     <string name="please_wait">Molimo pričekaj...</string>
 
     <string name="nav_my_profile">Moj Profil</string>
+    <string name="nav_statistics">Statistika</string>
     <string name="nav_sign_out">Odjavi Se</string>
 
     <string name="mobile">Broj Mobitela</string>
